# -Bipolar-Triadic-Neurosymbolic-Framework-

./: .gitattributes  .gitignore  README.md
Notebooks/: README_DATASETS.md  README_FILES.md  arxiv_miner.py  benchmark_google_analogy.py  calculate_ubs_metric.py  calculus_convergence_test.py  calculus_integration_experiment.py  goldbach_semantic_verification.py  ingest_physics_db.py  llm_connector.py  physics_knowledge_graph.graphml  pyproject.toml  real_world_glove_validation.py  run_additive_reto.py  test_buss_logic.py  test_fuzzy_logic.py  test_input.txt  test_output.semz  test_semantic_analogy.py  validate_graph_topology.py  validate_romiti_discovery.py  visualize_calculus.py  visualize_calculus_1000.py
Notebooks/.ipynb_checkpoints/: Master_Experiment_Log-checkpoint.ipynb
Notebooks/motor_semantico_v1/: pyproject.toml  semantic_engine.py  vector_space.py
Notebooks/motor_semantico_v1/buss_framework/core/: semantic_engine.py  vector_space.py
Notebooks/pro1/: restored.txt  semantic_compressor.py  test_output.semz
Notebooks/triadic_framework/core/: buss_bridge.py  generic_inference.py  network.py  triadic_search.py
motor_semantico_v1/: run_real_world_demo.py  run_semantic_demo.py  semantic_engine.py
paper/: Deterministic Semantic Resonance.tex
validacion_v1.0.0/: batch_miner.py  calculus_convergence_test.py  calculus_integration_experiment.py  final_demo_unified.py  final_physics_database.json  ingest_physics_db.py  knowledge_miner.py  run_additive_reto.py  scalability_analysis.py  test_modular_resonance.py  validate_graph_topology.py  visualize_calculus.py  (+2 more)
(+33 files in other folders)
