[project]
name = "validacion-v1-0-0"
version = "0.1.0"
description = ""
authors = [
    {name = "José Arturo Ornelas Brand",email = "arturoornelas62@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "validacion_v1"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
